--- a/app/index.html
+++ b/app/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
+    <link rel="stylesheet" href="css/bulma.css" />
     <link rel="stylesheet" href="css/simplebar.css" />
     <link rel="stylesheet" href="css/titlebar.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- Titlebar -->
-    <header id="titlebar">
-      <div id="drag-region">
-        <div id="window-title">
+    <header id="tb-titlebar">
+      <div id="tb-drag-region">
+        <div id="tb-window-title">
           <span>driync<span class="icon-dot">.</span></span>
         </div>
 
-        <div id="window-controls">
-          <div class="button" id="min-button">
+        <div id="tb-window-controls">
+          <div class="tb-button" id="tb-min-button">
             <img
-              class="icon"
+              class="tb-icon"
               srcset="
                 assets/min-w-10.png 1x,
                 assets/min-w-12.png 1.25x,
@@ -34,9 +35,9 @@
               draggable="false"
             />
           </div>
-          <div class="button" id="max-button">
+          <div class="tb-button" id="tb-max-button">
             <img
-              class="icon"
+              class="tb-icon"
               srcset="
                 assets/max-w-10.png 1x,
                 assets/max-w-12.png 1.25x,
@@ -51,9 +52,9 @@
               draggable="false"
             />
           </div>
-          <div class="button" id="restore-button">
+          <div class="tb-button" id="tb-restore-button">
             <img
-              class="icon"
+              class="tb-icon"
               srcset="
                 assets/restore-w-10.png 1x,
                 assets/restore-w-12.png 1.25x,
@@ -68,9 +69,9 @@
               draggable="false"
             />
           </div>
-          <div class="button" id="close-button">
+          <div class="tb-button" id="tb-close-button">
             <img
-              class="icon"
+              class="tb-icon"
               srcset="
                 assets/close-w-10.png 1x,
                 assets/close-w-12.png 1.25x,
@@ -90,47 +91,10 @@
     </header>
     <!-- Titlebar -->
 
-    <div id="main">
-      <h1>Driync!!</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero laborum magnam deleniti,
-        mollitia laboriosam quam possimus eos. Sapiente et pariatur eius magnam autem saepe, tenetur
-        quos unde id dignissimos nihil.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, minus deserunt? Dicta,
-        eligendi sunt. Aut voluptatum odit sint, doloremque delectus error animi reprehenderit
-        laudantium! Delectus sapiente officia optio doloremque beatae enim, laboriosam fugit nulla
-        incidunt non quo at perferendis nihil vel sint alias dolor velit, consectetur ut temporibus,
-        voluptate molestiae sit laborum? Exercitationem amet accusamus qui quasi, quae obcaecati
-        perspiciatis deserunt quaerat at. Dolorum, voluptas quia. Ad quidem magnam libero quaerat
-        quas, quo suscipit molestiae pariatur porro provident perferendis assumenda esse corporis
-        facilis totam itaque corrupti rerum labore quos. Labore perspiciatis maxime voluptas
-        deleniti qui, nulla vero alias dignissimos veniam.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, dolor aperiam odio
-        distinctio minus hic. Nihil suscipit in, soluta sint assumenda corporis pariatur eos,
-        maiores tempora, sit praesentium? Laborum voluptatibus assumenda omnis aliquid nulla
-        consectetur culpa ratione quia aut deleniti nostrum dolore vitae a sunt ex velit, facere
-        neque voluptatem odit eum voluptas quo mollitia? Quod ipsum voluptatibus voluptatum atque
-        optio ratione explicabo ea temporibus culpa. Minus minima dolorum tenetur cupiditate enim
-        asperiores nemo, laudantium eaque nam non necessitatibus praesentium sed dolor animi vitae
-        ab eius quia. Natus amet, quo minus sint voluptatibus nostrum similique itaque molestiae?
-        Repudiandae nisi similique animi eveniet, nihil aspernatur expedita fugit quibusdam totam
-        ullam recusandae voluptates cumque doloribus voluptate reprehenderit corrupti. Debitis sequi
-        a explicabo quisquam? Eaque numquam, vitae maxime magni harum qui aperiam voluptas odio sunt
-        perspiciatis doloribus repellendus asperiores totam pariatur hic fugiat ipsam quo id
-        eveniet! Repudiandae, dolore error. Porro consectetur nobis cupiditate expedita, neque
-        laudantium quibusdam culpa rem enim, obcaecati molestias. Iusto facere laudantium natus eius
-        consequatur facilis expedita voluptates deleniti? Aperiam sequi, aliquam pariatur delectus
-        voluptate eligendi quia sapiente? Vel a, officia velit vitae excepturi voluptatem inventore
-        eius nostrum, tenetur quibusdam, et corporis illo laborum omnis nobis recusandae temporibus
-        distinctio?
-      </p>
-    </div>
+    <div id="main"></div>
 
     <script src="js/simplebar.min.js"></script>
     <script src="js/titlebar.js"></script>
+    <script src="js/renderer.js"></script>
   </body>
 </html>
