--- a/app/index.html
+++ b/app/index.html
@@ -108,12 +108,10 @@
                     <i class="fas fa-upload"></i>
                   </span>
                   <span class="file-label">
-                    Choose a folder...
+                    Choose
                   </span>
                 </span>
-                <span id="folder-name" class="file-name">
-                  /home/alex/documents/main/
-                </span>
+                <span id="folder-name" class="file-name"> </span>
               </label>
             </div>
           </div>
@@ -135,7 +133,7 @@ assets/*.mp4"
             <h6>How often do you want to sync?</h6>
             <div class="field has-addons">
               <p class="control">
-                <input id="sync-minutes" class="input" type="number" placeholder="60" />
+                <input id="sync-minutes" class="input" type="number" />
               </p>
               <p class="control">
                 <a class="button is-static">
