Secondary Windows Improvements & Sync functionality w/ logging

--- a/app/secondary.html
+++ b/app/secondary.html
@@ -97,7 +97,8 @@
 
     <div id="main">
       <br />
-      <p>Here's the list of folders & files that will be backed up</p>
+      <p>Here's the list of folders & files that will be backed up.</p>
+      <p id="total-length"></p>
       <p id="total-size"></p>
       <br />
       <table class="table is-fullwidth">
@@ -110,6 +111,7 @@
         </thead>
         <tbody id="tbody"></tbody>
       </table>
+      <p id="file-info-path" class="help"></p>
     </div>
 
     <script src="js/simplebar.min.js"></script>
